# tinify

./: CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  ROADMAP.md  Readme.md  mkdocs.yml  mypy.ini  pyproject.toml  setup.py
.github/workflows/: tests.yml
compressai/cli/: __init__.py  __main__.py  config.py  train.py
configs/: bmshj2018-hyperprior.yaml  cheng2020-anchor.yaml  mbt2018-mean.yaml  mbt2018-vbr.yaml  ssf2020-video.yaml
docker/: Dockerfile  Dockerfile.cpu
docs/mkdocs/: index.md  references.md  techniques.md
docs/source/: ans.rst  compressai.rst  conf.py  datasets.rst  entropy_models.rst  generate_cli_help.py  index.rst  installation.rst  latent_codecs.rst  layers.rst  losses.rst  models.rst  ops.rst  transforms.rst  zoo.rst
examples/: codec.py  run-benchmarks.sh  train.py  train_elic_cifar10.py  train_pointcloud.py  train_video.py
tests/: test_bench_codec.py  test_bench_codec_video.py  test_codec.py  test_coder.py  test_datasets.py  test_datasets_video.py  test_entropy_models.py  test_entropy_models_vbr.py  test_eval_model.py  test_eval_model_video.py  test_find_close.py  test_init.py  test_layers.py  test_models.py  test_ops.py  test_plot.py  test_scripting.py  test_transforms.py  test_update_model.py  test_waseda.py  test_zoo.py
tinify/: __init__.py
tinify/cli/: __init__.py  __main__.py  train.py
tinify/datasets/: image.py  pregenerated.py  video.py  vimeo90k.py
tinify/entropy_models/: entropy_models.py  entropy_models_vbr.py
tinify/rust_exts/: .gitignore  pyproject.toml
tinify/rust_exts/src/: encoder.rs  ops.rs  rans64.rs
(+71 files in other folders)
