[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "tinify_exts"
version = "0.1.0"
description = "Rust extensions for tinify - rANS entropy coding and operations"
requires-python = ">=3.8"
license = {text = "BSD-3-Clause"}

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "tinify_exts"
